--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -608,6 +608,7 @@
     <tomahawk.version>1.1.6</tomahawk.version>
     <javamail.version>1.4</javamail.version>
     <acegi.jsf.version>1.1.3</acegi.jsf.version>
+    <jstl.standard.version>1.1.2</jstl.standard.version>
 
   </properties>
 
