--- a/trunk/glvnsjc/webapp/WEB-INF/web.xml
+++ b/trunk/glvnsjc/webapp/WEB-INF/web.xml
@@ -84,7 +84,7 @@
 
     </param-value>
   </context-param>
-  
+
   <context-param>
     <param-name>webAppRootKey</param-name>
     <param-value>glvnsjc.webroot</param-value>
@@ -95,10 +95,20 @@
     <param-value>/WEB-INF/log4j.properties</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+    <param-value>org.glvnsjc.resource.ApplicationResources</param-value>
+  </context-param>
+  
+  <context-param>
+    <param-name>javax.servlet.jsp.jstl.fmt.fallbackLocale</param-name>
+    <param-value>en</param-value>
+  </context-param>
+
   <!-- =========================================================================== 
     Listeners                          
     =========================================================================== -->
-  
+
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
@@ -125,12 +135,12 @@
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  
+
   <servlet>
     <servlet-name>resources</servlet-name>
     <servlet-class>org.apache.myfaces.trinidad.webapp.ResourceServlet</servlet-class>
   </servlet>
-  
+
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
