--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -100,7 +100,7 @@
     <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
     <param-value>org.glvnsjc.resource.ApplicationResources</param-value>
   </context-param>
-  
+
   <context-param>
     <param-name>javax.servlet.jsp.jstl.fmt.fallbackLocale</param-name>
     <param-value>en</param-value>
@@ -129,7 +129,7 @@
   </listener>
 
   <listener>
-      <listener-class>org.glvnsjc.webapp.listener.StartupListener</listener-class>
+    <listener-class>org.glvnsjc.webapp.listener.StartupListener</listener-class>
   </listener>
 
 
@@ -189,6 +189,16 @@
       <param-name>maxFileSize</param-name>
       <param-value>2m</param-value>
     </init-param>
+  </filter>
+
+  <filter>
+    <filter-name>localeFilter</filter-name>
+    <filter-class>org.glvnsjc.webapp.filter.LocaleFilter</filter-class>
+  </filter>
+  
+  <filter>
+    <filter-name>messageFilter</filter-name>
+    <filter-class>org.glvnsjc.webapp.filter.MessageFilter</filter-class>
   </filter>
 
   <!-- =========================================================================== 
