--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -230,6 +230,18 @@
 
     </dependency>
 
+    <dependency>
+      <groupId>com.corejsf</groupId>
+      <artifactId>corejsf-validator</artifactId>
+      <version>${corejsf.validator.version}</version>
+    </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>${jsp.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
     <!-- ================================================================== -->
     <!--  logger                                                            -->
