--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -609,7 +609,8 @@
     <javamail.version>1.4</javamail.version>
     <acegi.jsf.version>1.1.3</acegi.jsf.version>
     <jstl.standard.version>1.1.2</jstl.standard.version>
-
+    <corejsf.validator.version>1.0</corejsf.validator.version>
+    <jsp.version>2.1</jsp.version>
   </properties>
 
 </project>
