--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
   <!-- =========================================================================== 
     Context settings                             
     =========================================================================== -->
+  <context-param>
+    <param-name>csstheme</param-name>
+    <param-value>andreas01</param-value>
+  </context-param>
 
   <context-param>
     <param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
@@ -181,7 +185,12 @@
       <param-value>true</param-value>
     </init-param>
   </filter>
-
+  
+  <filter-mapping>
+    <filter-name>securityFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <filter>
     <filter-name>extensionsFilter</filter-name>
     <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
@@ -195,7 +204,7 @@
     <filter-name>localeFilter</filter-name>
     <filter-class>org.glvnsjc.webapp.filter.LocaleFilter</filter-class>
   </filter>
-  
+
   <filter>
     <filter-name>messageFilter</filter-name>
     <filter-class>org.glvnsjc.webapp.filter.MessageFilter</filter-class>
