--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -152,6 +152,11 @@
   </servlet>
 
   <servlet-mapping>
+    <servlet-name>resources</servlet-name>
+    <url-pattern>/adf/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
@@ -185,12 +190,12 @@
       <param-value>true</param-value>
     </init-param>
   </filter>
-  
+
   <filter-mapping>
     <filter-name>securityFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
+
   <filter>
     <filter-name>extensionsFilter</filter-name>
     <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
