--- a/trunk/glvnsjc/webapp/WEB-INF/web.xml
+++ b/trunk/glvnsjc/webapp/WEB-INF/web.xml
@@ -174,6 +174,15 @@
   </filter>
 
   <filter>
+    <filter-name>ajax4jsf</filter-name>
+    <filter-class>org.ajax4jsf.Filter</filter-class>
+    <init-param>
+      <param-name>forceparser</param-name>
+      <param-value>false</param-value>
+    </init-param>
+  </filter>
+
+  <filter>
     <filter-name>trinidad</filter-name>
     <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
   </filter>
@@ -218,6 +227,14 @@
   <!-- =========================================================================== 
     Filter settings                             
     =========================================================================== -->
+
+  <filter-mapping>
+    <filter-name>ajax4jsf</filter-name>
+    <servlet-name>Faces Servlet</servlet-name>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+  </filter-mapping>
 
   <filter-mapping>
     <filter-name>trinidad</filter-name>
