--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -612,6 +612,7 @@
     <corejsf.validator.version>1.0</corejsf.validator.version>
     <jsp.version>2.1</jsp.version>
     <ajax4jsf.version>1.1.1</ajax4jsf.version>
+    <sitemesh.version>2.2.1</sitemesh.version>
   </properties>
 
 </project>
