--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -59,6 +59,10 @@
       <layout>legacy</layout>
     </repository>
     <repository>
+      <id>appfuse</id>
+      <url>http://static.appfuse.org/repository</url>
+    </repository>
+    <repository>
       <id>snapshots</id>
       <name>Apache Snapshots</name>
       <url>http://people.apache.org/repo/m2-snapshot-repository</url>
@@ -591,8 +595,8 @@
 
     <openjpa.version>1.0.2</openjpa.version>
 
-    <hibernate.entitymanager.version>3.3.1.ga</hibernate.entitymanager.version>
-    <hibernate.annotations.version>3.3.1.ga</hibernate.annotations.version>
+    <hibernate.entitymanager.version>3.3.2.GA</hibernate.entitymanager.version>
+    <hibernate.annotations.version>3.3.1.GA</hibernate.annotations.version>
     <hibernate.core.version>3.2.6.ga</hibernate.core.version>
 
     <derby.version>10.4.1.3</derby.version>
