--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -235,7 +235,7 @@
       <dependency>
         <groupId>org.apache.myfaces.trinidad</groupId>
         <artifactId>trinidad-impl</artifactId>
-        <version>1.2.7</version>
+        <version>${trinidad.version}</version>
       </dependency>
 
       <dependency>
@@ -617,6 +617,7 @@
     <jsp.version>2.1</jsp.version>
     <ajax4jsf.version>1.1.1</ajax4jsf.version>
     <sitemesh.version>2.2.1</sitemesh.version>
+    <trinidad.version>1.2.8</trinidad.version>
   </properties>
 
 </project>
