--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -244,9 +244,15 @@
     </dependency>
 
     <dependency>
-      <groupId>org.ajax4jsf</groupId>
-      <artifactId>ajax4jsf</artifactId>
-      <version>${ajax4jsf.version}</version>
+      <groupId>org.richfaces.framework</groupId>
+      <artifactId>richfaces-impl</artifactId>
+      <version>${richfaces.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.richfaces.ui</groupId>
+      <artifactId>richfaces-ui</artifactId>
+      <version>${richfaces.version}</version>
     </dependency>
 
     <dependency>
