--- a/glvnsjc/src/main/resources/org/glvnsjc/resource/ApplicationResources.properties
+++ b/glvnsjc/src/main/resources/org/glvnsjc/resource/ApplicationResources.properties
@@ -2,10 +2,10 @@
 # like to override them for other languages, simply add the keys
 # to the other resource bundles.
 webapp.name=Shamrock
-webapp.tagline=Open source school management.
+webapp.tagline=Safely Manage Your School Data.
 webapp.version=Version ${pom.version}
-company.name=Sham Rock
-company.url=http://www.glvnsjc.com
+company.name=glvnsjc
+company.url=http://www.glvnsjc.org
 copyright.year=${copyright.year}
 
 user.status=Logged in as: 
