--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     =========================================================================== -->
   <context-param>
     <param-name>csstheme</param-name>
-    <param-value>andreas01</param-value>
+    <param-value>simplicity</param-value>
   </context-param>
 
   <context-param>
@@ -36,7 +36,7 @@
 
   <context-param>
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>client</param-value>
+    <param-value>server</param-value>
     <!--param-value>server</param-value-->
   </context-param>
 
@@ -58,6 +58,11 @@
   <context-param>
     <param-name>facelets.DEVELOPMENT</param-name>
     <param-value>true</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>org.richfaces.SKIN</param-name>
+    <param-value>blueSky</param-value>
   </context-param>
 
   <context-param>
@@ -120,6 +125,10 @@
     =========================================================================== -->
 
   <listener>
+    <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+  </listener>
+
+  <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
@@ -179,7 +188,7 @@
   </filter>
 
   <filter>
-    <filter-name>ajax4jsf</filter-name>
+    <filter-name>richfaces</filter-name>
     <filter-class>org.ajax4jsf.Filter</filter-class>
     <init-param>
       <param-name>forceparser</param-name>
@@ -253,7 +262,7 @@
   </filter-mapping>
 
   <filter-mapping>
-    <filter-name>ajax4jsf</filter-name>
+    <filter-name>richfaces</filter-name>
     <servlet-name>Faces Servlet</servlet-name>
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>FORWARD</dispatcher>
