--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
       <url>http://static.appfuse.org/repository</url>
     </repository>
     <repository>
+      <id>jboss</id>
+      <url>http://repository.jboss.com/maven</url>
+    </repository>
+    <repository>
       <id>snapshots</id>
       <name>Apache Snapshots</name>
       <url>http://people.apache.org/repo/m2-snapshot-repository</url>
@@ -125,7 +129,7 @@
       <dependency>
         <groupId>hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
-        <version>1.8.0.7</version>
+        <version>${hsqldb.version}</version>
       </dependency>
 
       <dependency>
@@ -599,6 +603,7 @@
     <hibernate.annotations.version>3.3.1.GA</hibernate.annotations.version>
     <hibernate.core.version>3.2.6.ga</hibernate.core.version>
 
+    <hsqldb.version>1.8.0.7</hsqldb.version>
     <derby.version>10.4.1.3</derby.version>
     <spring.version>2.5.4</spring.version>
     <aspectj.version>1.6.0</aspectj.version>
@@ -618,6 +623,7 @@
     <ajax4jsf.version>1.1.1</ajax4jsf.version>
     <sitemesh.version>2.2.1</sitemesh.version>
     <trinidad.version>1.2.8</trinidad.version>
+    <richfaces.version>3.2.1.CR5</richfaces.version>
   </properties>
 
 </project>
