--- a/glvnsjc/webapp/WEB-INF/web.xml
+++ b/glvnsjc/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
   <context-param>
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>server</param-value>
+    <param-value>client</param-value>
     <!--param-value>server</param-value-->
   </context-param>
 
