--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -64,7 +64,7 @@
     </repository>
     <repository>
       <id>jboss</id>
-      <url>http://repository.jboss.com/maven</url>
+      <url>http://repository.jboss.com/maven2</url>
     </repository>
     <repository>
       <id>snapshots</id>
